--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,19 @@
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
         "build": "tsc -p tsconfig.json",
+        "prisma": "prisma",
+        "migrate": "prisma migrate dev",
+        "generate": "prisma generate",
         "start": "node dist/index.js",
         "lint": "eslint \"src/**/*.{ts,tsx}\"",
         "format": "prettier --write ."
     },
     "dependencies": {
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "@prisma/client": "^5.6.0",
+        "bcrypt": "^5.1.1",
+        "jsonwebtoken": "^9.0.0",
+        "dotenv": "^16.3.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
