Complete ThaiTable Phase 1 Week 2: Menu Management System
 Major Features Added:
- Enhanced database schema with Thai market entities
- Complete menu management CRUD API with validation
- Category management with drag-and-drop reordering
- Comprehensive frontend UI with Thai language support
- Beautiful development environment with ThaiTable theme

 Technical Improvements:
- ESLint + Prettier configuration for both frontend/backend
- TypeScript path aliases and proper configuration
- Enhanced VS Code settings with ThaiTable branding
- Complete i18n setup with Thai/English translations
- Mobile-responsive design for Thai restaurant tablets

 New Files:
- Menu management components and services
- Category management system
- Enhanced API routes with Thai error messages
- Development environment configurations
- Complete TypeScript configurations

 Status: Phase 1 Week 2 Complete (90% of Foundation Phase)
Next: Week 3 - Order Management & Mobile Testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,470 @@
 {
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-        "source.organizeImports": true
-    },
-    "typescript.preferences.includePackageJsonAutoImports": "on",
-    "ai.models": [
-        "gpt-4",
-        "claude-3-sonnet"
+  // 🎨 Theme & Appearance
+  "workbench.colorTheme": "GitHub Dark Default",
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.productIconTheme": "material-product-icons",
+  // 🌟 ThaiTable Custom Colors
+  "workbench.colorCustomizations": {
+    "titleBar.activeBackground": "#F59E0B",
+    "titleBar.activeForeground": "#FFFFFF",
+    "activityBar.background": "#1F2937",
+    "activityBar.foreground": "#F59E0B",
+    "activityBar.activeBorder": "#F59E0B",
+    "activityBarBadge.background": "#F59E0B",
+    "activityBarBadge.foreground": "#FFFFFF",
+    "statusBar.background": "#1F2937",
+    "statusBar.foreground": "#F59E0B",
+    "statusBar.debuggingBackground": "#DC2626",
+    "statusBar.debuggingForeground": "#FFFFFF",
+    "sideBar.background": "#111827",
+    "sideBar.foreground": "#D1D5DB",
+    "sideBarTitle.foreground": "#F59E0B",
+    "editorGroup.border": "#374151",
+    "tab.activeBackground": "#1F2937",
+    "tab.activeForeground": "#F59E0B",
+    "tab.inactiveBackground": "#111827",
+    "tab.inactiveForeground": "#9CA3AF",
+    "tab.activeBorder": "#F59E0B",
+    "tab.activeBorderTop": "#F59E0B",
+    "panel.background": "#111827",
+    "panel.border": "#374151",
+    "terminal.background": "#0F172A",
+    "terminal.foreground": "#E2E8F0",
+    "terminalCursor.background": "#F59E0B",
+    "terminalCursor.foreground": "#F59E0B"
+  },
+  // 📝 Editor Settings
+  "editor.fontFamily": "'JetBrains Mono', 'Fira Code', 'Cascadia Code', 'Consolas', 'Monaco', 'Courier New', monospace",
+  "editor.fontSize": 14,
+  "editor.fontLigatures": true,
+  "editor.lineHeight": 1.6,
+  "editor.cursorBlinking": "smooth",
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.renderWhitespace": "boundary",
+  "editor.renderControlCharacters": false,
+  "editor.renderLineHighlight": "all",
+  "editor.minimap.enabled": true,
+  "editor.minimap.renderCharacters": false,
+  "editor.minimap.maxColumn": 120,
+  "editor.bracketPairColorization.enabled": true,
+  "editor.guides.bracketPairs": "active",
+  "editor.guides.indentation": true,
+  "editor.wordWrap": "on",
+  "editor.rulers": [
+    80,
+    120
+  ],
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
+  "editor.detectIndentation": false,
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "explicit"
+  },
+  // 🎯 TypeScript & JavaScript
+  "typescript.preferences.includePackageJsonAutoImports": "on",
+  "typescript.suggest.autoImports": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "typescript.preferences.importModuleSpecifier": "relative",
+  "javascript.preferences.includePackageJsonAutoImports": "on",
+  "javascript.suggest.autoImports": true,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "javascript.preferences.importModuleSpecifier": "relative",
+  // 🎨 Tailwind CSS
+  "tailwindCSS.includeLanguages": {
+    "typescript": "javascript",
+    "typescriptreact": "javascript"
+  },
+  "tailwindCSS.experimental.classRegex": [
+    [
+      "cva\\(([^)]*)\\)",
+      "[\"'`]([^\"'`]*).*?[\"'`]"
     ],
-    "ai.autocomplete": true,
-    "ai.codeActions": true,
-    "ai.contextWindow": "large",
-    "editor.codeActions.triggerOnFocusChange": true
+    [
+      "cx\\(([^)]*)\\)",
+      "(?:'|\"|`)([^']*)(?:'|\"|`)"
+    ]
+  ],
+  "tailwindCSS.includeLanguages": {
+    "typescript": "javascript",
+    "typescriptreact": "javascript"
+  },
+  // 🔍 Search & Navigation
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/dist": true,
+    "**/build": true,
+    "**/.git": true,
+    "**/coverage": true,
+    "**/.next": true,
+    "**/out": true
+  },
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/node_modules": true,
+    "**/dist": true,
+    "**/build": true,
+    "**/.next": true,
+    "**/out": true
+  },
+  "files.watcherExclude": {
+    "**/node_modules/**": true,
+    "**/dist/**": true,
+    "**/build/**": true,
+    "**/.git/**": true,
+    "**/.next/**": true,
+    "**/out/**": true
+  },
+  // 📁 File Associations
+  "files.associations": {
+    "*.prisma": "prisma",
+    "*.env*": "dotenv",
+    "*.json": "jsonc"
+  },
+  // 🎨 Emmet
+  "emmet.includeLanguages": {
+    "typescript": "html",
+    "typescriptreact": "html",
+    "javascript": "html",
+    "javascriptreact": "html"
+  },
+  "emmet.triggerExpansionOnTab": true,
+  // 🔧 Git
+  "git.enableSmartCommit": true,
+  "git.confirmSync": false,
+  "git.autofetch": true,
+  "git.autofetchPeriod": 180,
+  "git.decorations.enabled": true,
+  // 🎯 Terminal
+  "terminal.integrated.fontFamily": "'JetBrains Mono', 'Fira Code', 'Cascadia Code', monospace",
+  "terminal.integrated.fontSize": 13,
+  "terminal.integrated.lineHeight": 1.4,
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.integrated.defaultProfile.windows": "PowerShell",
+  "terminal.integrated.defaultProfile.linux": "bash",
+  "terminal.integrated.defaultProfile.osx": "zsh",
+  // 🎨 Bracket Pair Colorization
+  "editor.bracketPairColorization.enabled": true,
+  "editor.guides.bracketPairs": "active",
+  "editor.guides.bracketPairsHorizontal": "active",
+  "editor.guides.highlightActiveBracketPair": true,
+  // 🔍 IntelliSense
+  "editor.quickSuggestions": {
+    "other": true,
+    "comments": false,
+    "strings": true
+  },
+  "editor.parameterHints.enabled": true,
+  "editor.hover.enabled": true,
+  "editor.suggest.showKeywords": true,
+  "editor.suggest.showSnippets": true,
+  "editor.suggest.showClasses": true,
+  "editor.suggest.showFunctions": true,
+  "editor.suggest.showVariables": true,
+  "editor.suggest.showConstants": true,
+  "editor.suggest.showEnums": true,
+  "editor.suggest.showEnumMembers": true,
+  "editor.suggest.showWords": true,
+  "editor.suggest.showColors": true,
+  "editor.suggest.showFiles": true,
+  "editor.suggest.showReferences": true,
+  "editor.suggest.showCustomcolors": true,
+  "editor.suggest.showUsers": true,
+  "editor.suggest.showIssues": true,
+  // 🎯 Auto Save
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 1000,
+  // 📝 Word Wrap
+  "editor.wordWrap": "on",
+  "editor.wordWrapColumn": 120,
+  // 🎨 Indent Guides
+  "editor.guides.indentation": true,
+  "editor.guides.bracketPairs": "active",
+  // 🔍 Explorer
+  "explorer.compactFolders": false,
+  "explorer.incrementalNaming": "smart",
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  // 🎯 Problems Panel
+  "problems.decorations.enabled": true,
+  // 🎨 Breadcrumbs
+  "breadcrumbs.enabled": true,
+  "breadcrumbs.showFiles": true,
+  "breadcrumbs.showSymbols": true,
+  "breadcrumbs.showIcons": true,
+  // 🔍 Outline
+  "outline.showVariables": true,
+  "outline.showFunctions": true,
+  "outline.showClasses": true,
+  "outline.showModules": true,
+  "outline.showNamespaces": true,
+  "outline.showEnums": true,
+  "outline.showEnumsMembers": true,
+  "outline.showEvents": true,
+  "outline.showConstructors": true,
+  "outline.showFields": true,
+  "outline.showProperties": true,
+  "outline.showMethods": true,
+  "outline.showOperators": true,
+  "outline.showTypeParameters": true,
+  "outline.showConstants": true,
+  "outline.showStrings": true,
+  "outline.showNumbers": true,
+  "outline.showBooleans": true,
+  "outline.showArrays": true,
+  "outline.showObjects": true,
+  "outline.showKeys": true,
+  "outline.showNull": true,
+  "outline.showUndefined": true,
+  // 🎯 ThaiTable Specific Settings
+  "files.encoding": "utf8",
+  "files.eol": "\n",
+  "files.trimTrailingWhitespace": true,
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+  // 🔧 Extensions Settings
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+  "eslint.format.enable": true,
+  "prettier.singleQuote": true,
+  "prettier.trailingComma": "es5",
+  "prettier.printWidth": 80,
+  "prettier.tabWidth": 2,
+  "prettier.useTabs": false,
+  "prettier.semi": true,
+  "prettier.bracketSpacing": true,
+  "prettier.bracketSameLine": false,
+  "prettier.arrowParens": "avoid",
+  "prettier.endOfLine": "lf",
+  // 🎯 ThaiTable Project Specific
+  "typescript.preferences.includePackageJsonAutoImports": "on",
+  "typescript.suggest.autoImports": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "typescript.preferences.importModuleSpecifier": "relative",
+  "typescript.preferences.quoteStyle": "single",
+  "typescript.preferences.includeCompletionsForModuleExports": true,
+  "typescript.preferences.includeCompletionsWithSnippetText": true,
+  "typescript.preferences.includeCompletionsWithInsertText": true,
+  "typescript.preferences.includeCompletionsWithReplaceText": true,
+  "typescript.preferences.includeCompletionsWithClassMemberSnippets": true,
+  "typescript.preferences.includeCompletionsWithObjectLiteralMethodSnippets": true,
+  "typescript.preferences.includeCompletionsWithFunctionParameterSnippets": true,
+  "typescript.preferences.includeCompletionsWithJSDocParameterSnippets": true,
+  "typescript.preferences.includeCompletionsWithOptionalChaining": true,
+  "typescript.preferences.includeCompletionsWithInsertText": true,
+  "typescript.preferences.includeCompletionsWithReplaceText": true,
+  "typescript.preferences.includeCompletionsWithSnippetText": true,
+  "typescript.preferences.includeCompletionsWithClassMemberSnippets": true,
+  "typescript.preferences.includeCompletionsWithObjectLiteralMethodSnippets": true,
+  "typescript.preferences.includeCompletionsWithFunctionParameterSnippets": true,
+  "typescript.preferences.includeCompletionsWithJSDocParameterSnippets": true,
+  "typescript.preferences.includeCompletionsWithOptionalChaining": true,
+  // 🎨 Welcome Experience
+  "workbench.startupEditor": "none",
+  "workbench.welcomePage.walkthroughs.openOnInstall": false,
+  // 🔧 Performance
+  "workbench.enableExperiments": false,
+  "workbench.settings.enableNaturalLanguageSearch": false,
+  "workbench.settings.editor": "ui",
+  "workbench.settings.useSplitJSON": false,
+  "workbench.settings.openDefaultSettings": false,
+  "workbench.settings.openDefaultKeybindings": false,
+  "workbench.settings.openDefaultKeybindingsFile": false,
+  "workbench.settings.openDefaultSnippets": false,
+  "workbench.settings.openDefaultSnippetsFile": false,
+  "workbench.settings.openDefaultExtensions": false,
+  "workbench.settings.openDefaultExtensionsFile": false,
+  "workbench.settings.openDefaultUserData": false,
+  "workbench.settings.openDefaultUserDataFile": false,
+  "workbench.settings.openDefaultWorkspaceData": false,
+  "workbench.settings.openDefaultWorkspaceDataFile": false,
+  "workbench.settings.openDefaultWorkspaceSettings": false,
+  "workbench.settings.openDefaultWorkspaceSettingsFile": false,
+  "workbench.settings.openDefaultWorkspaceKeybindings": false,
+  "workbench.settings.openDefaultWorkspaceKeybindingsFile": false,
+  "workbench.settings.openDefaultWorkspaceSnippets": false,
+  "workbench.settings.openDefaultWorkspaceSnippetsFile": false,
+  "workbench.settings.openDefaultWorkspaceExtensions": false,
+  "workbench.settings.openDefaultWorkspaceExtensionsFile": false,
+  // 🎯 ThaiTable Branding
+  "workbench.colorCustomizations": {
+    "titleBar.activeBackground": "#F59E0B",
+    "titleBar.activeForeground": "#FFFFFF",
+    "titleBar.inactiveBackground": "#1F2937",
+    "titleBar.inactiveForeground": "#9CA3AF",
+    "activityBar.background": "#1F2937",
+    "activityBar.foreground": "#F59E0B",
+    "activityBar.activeBorder": "#F59E0B",
+    "activityBarBadge.background": "#F59E0B",
+    "activityBarBadge.foreground": "#FFFFFF",
+    "statusBar.background": "#1F2937",
+    "statusBar.foreground": "#F59E0B",
+    "statusBar.debuggingBackground": "#DC2626",
+    "statusBar.debuggingForeground": "#FFFFFF",
+    "sideBar.background": "#111827",
+    "sideBar.foreground": "#D1D5DB",
+    "sideBarTitle.foreground": "#F59E0B",
+    "editorGroup.border": "#374151",
+    "tab.activeBackground": "#1F2937",
+    "tab.activeForeground": "#F59E0B",
+    "tab.inactiveBackground": "#111827",
+    "tab.inactiveForeground": "#9CA3AF",
+    "tab.activeBorder": "#F59E0B",
+    "tab.activeBorderTop": "#F59E0B",
+    "panel.background": "#111827",
+    "panel.border": "#374151",
+    "terminal.background": "#0F172A",
+    "terminal.foreground": "#E2E8F0",
+    "terminalCursor.background": "#F59E0B",
+    "terminalCursor.foreground": "#F59E0B",
+    "editor.background": "#0F172A",
+    "editor.foreground": "#E2E8F0",
+    "editor.lineHighlightBackground": "#1E293B",
+    "editor.selectionBackground": "#334155",
+    "editor.inactiveSelectionBackground": "#1E293B",
+    "editor.findMatchBackground": "#F59E0B40",
+    "editor.findMatchHighlightBackground": "#F59E0B20",
+    "editor.findRangeHighlightBackground": "#F59E0B10",
+    "editor.hoverHighlightBackground": "#334155",
+    "editor.lineHighlightBorder": "#1E293B",
+    "editor.rangeHighlightBackground": "#F59E0B10",
+    "editor.wordHighlightBackground": "#F59E0B20",
+    "editor.wordHighlightStrongBackground": "#F59E0B40",
+    "editorBracketMatch.background": "#F59E0B20",
+    "editorBracketMatch.border": "#F59E0B",
+    "editorIndentGuide.background": "#334155",
+    "editorIndentGuide.activeBackground": "#F59E0B",
+    "editorLineNumber.foreground": "#64748B",
+    "editorLineNumber.activeForeground": "#F59E0B",
+    "editorRuler.foreground": "#334155",
+    "editorCodeLens.foreground": "#64748B",
+    "editorLightBulb.foreground": "#F59E0B",
+    "editorLightBulbAutoFix.foreground": "#10B981",
+    "diffEditor.insertedTextBackground": "#10B98120",
+    "diffEditor.removedTextBackground": "#EF444420",
+    "diffEditor.diagonalFill": "#374151",
+    "list.activeSelectionBackground": "#F59E0B20",
+    "list.activeSelectionForeground": "#F59E0B",
+    "list.inactiveSelectionBackground": "#334155",
+    "list.inactiveSelectionForeground": "#E2E8F0",
+    "list.hoverBackground": "#1E293B",
+    "list.hoverForeground": "#E2E8F0",
+    "list.focusBackground": "#F59E0B20",
+    "list.focusForeground": "#F59E0B",
+    "list.highlightForeground": "#F59E0B",
+    "list.warningForeground": "#F59E0B",
+    "list.errorForeground": "#EF4444",
+    "list.filterMatchBackground": "#F59E0B20",
+    "list.filterMatchBorder": "#F59E0B",
+    "list.deemphasizedForeground": "#64748B",
+    "list.invalidItemForeground": "#EF4444",
+    "list.dropBackground": "#F59E0B20",
+    "list.filterWidgetBackground": "#1F2937",
+    "list.filterWidgetOutline": "#F59E0B",
+    "list.filterWidgetNoMatchesOutline": "#EF4444",
+    "tree.indentGuidesStroke": "#334155",
+    "tree.tableColumnsBorder": "#374151",
+    "tree.tableOddRowsBackground": "#1E293B",
+    "button.background": "#F59E0B",
+    "button.foreground": "#FFFFFF",
+    "button.hoverBackground": "#D97706",
+    "button.secondaryBackground": "#374151",
+    "button.secondaryForeground": "#E2E8F0",
+    "button.secondaryHoverBackground": "#4B5563",
+    "checkbox.background": "#1F2937",
+    "checkbox.foreground": "#F59E0B",
+    "checkbox.border": "#374151",
+    "dropdown.background": "#1F2937",
+    "dropdown.foreground": "#E2E8F0",
+    "dropdown.border": "#374151",
+    "dropdown.listBackground": "#1F2937",
+    "input.background": "#1F2937",
+    "input.foreground": "#E2E8F0",
+    "input.border": "#374151",
+    "input.placeholderForeground": "#64748B",
+    "inputOption.activeBackground": "#F59E0B20",
+    "inputOption.activeBorder": "#F59E0B",
+    "inputOption.hoverBackground": "#334155",
+    "inputValidation.infoBackground": "#3B82F620",
+    "inputValidation.infoBorder": "#3B82F6",
+    "inputValidation.warningBackground": "#F59E0B20",
+    "inputValidation.warningBorder": "#F59E0B",
+    "inputValidation.errorBackground": "#EF444420",
+    "inputValidation.errorBorder": "#EF4444",
+    "scrollbar.shadow": "#00000040",
+    "scrollbarSlider.background": "#374151",
+    "scrollbarSlider.hoverBackground": "#4B5563",
+    "scrollbarSlider.activeBackground": "#F59E0B",
+    "progressBar.background": "#F59E0B",
+    "editorWidget.background": "#1F2937",
+    "editorWidget.foreground": "#E2E8F0",
+    "editorWidget.border": "#374151",
+    "editorWidget.resizeBorder": "#F59E0B",
+    "editorSuggestWidget.background": "#1F2937",
+    "editorSuggestWidget.foreground": "#E2E8F0",
+    "editorSuggestWidget.border": "#374151",
+    "editorSuggestWidget.selectedBackground": "#F59E0B20",
+    "editorSuggestWidget.selectedForeground": "#F59E0B",
+    "editorSuggestWidget.highlightForeground": "#F59E0B",
+    "editorSuggestWidget.focusHighlightForeground": "#F59E0B",
+    "editorHoverWidget.background": "#1F2937",
+    "editorHoverWidget.foreground": "#E2E8F0",
+    "editorHoverWidget.border": "#374151",
+    "editorHoverWidget.statusBarBackground": "#0F172A",
+    "debugToolBar.background": "#1F2937",
+    "debugToolBar.border": "#374151",
+    "debugIcon.startForeground": "#10B981",
+    "debugIcon.pauseForeground": "#F59E0B",
+    "debugIcon.stopForeground": "#EF4444",
+    "debugIcon.disconnectForeground": "#EF4444",
+    "debugIcon.restartForeground": "#10B981",
+    "debugIcon.stepOverForeground": "#F59E0B",
+    "debugIcon.stepIntoForeground": "#F59E0B",
+    "debugIcon.stepOutForeground": "#F59E0B",
+    "debugIcon.continueForeground": "#10B981",
+    "debugIcon.stepBackForeground": "#F59E0B",
+    "debugIcon.breakpointForeground": "#EF4444",
+    "debugIcon.breakpointDisabledForeground": "#64748B",
+    "debugIcon.breakpointUnverifiedForeground": "#F59E0B",
+    "debugIcon.breakpointCurrentStackframeForeground": "#F59E0B",
+    "debugIcon.breakpointStackframeForeground": "#F59E0B",
+    "debugIcon.startForeground": "#10B981",
+    "debugIcon.pauseForeground": "#F59E0B",
+    "debugIcon.stopForeground": "#EF4444",
+    "debugIcon.disconnectForeground": "#EF4444",
+    "debugIcon.restartForeground": "#10B981",
+    "debugIcon.stepOverForeground": "#F59E0B",
+    "debugIcon.stepIntoForeground": "#F59E0B",
+    "debugIcon.stepOutForeground": "#F59E0B",
+    "debugIcon.continueForeground": "#10B981",
+    "debugIcon.stepBackForeground": "#F59E0B",
+    "debugIcon.breakpointForeground": "#EF4444",
+    "debugIcon.breakpointDisabledForeground": "#64748B",
+    "debugIcon.breakpointUnverifiedForeground": "#F59E0B",
+    "debugIcon.breakpointCurrentStackframeForeground": "#F59E0B",
+    "debugIcon.breakpointStackframeForeground": "#F59E0B",
+    "notifications.background": "#1F2937",
+    "notifications.foreground": "#E2E8F0",
+    "notifications.border": "#374151",
+    "notificationLink.foreground": "#F59E0B",
+    "notificationCenterHeader.background": "#0F172A",
+    "notificationCenterHeader.foreground": "#E2E8F0",
+    "notificationsErrorIcon.foreground": "#EF4444",
+    "notificationsWarningIcon.foreground": "#F59E0B",
+    "notificationsInfoIcon.foreground": "#3B82F6",
+    "window.activeBorder": "#F59E0B",
+    "window.inactiveBorder": "#374151"
+  }
 }
