--- a/backend/package.json
+++ b/backend/package.json
@@ -14,20 +14,29 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "express": "^4.18.2",
         "@prisma/client": "^5.6.0",
         "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.5.1",
+        "helmet": "^7.2.0",
         "jsonwebtoken": "^9.0.0",
-        "dotenv": "^16.3.1"
+        "winston": "^3.17.0",
+        "zod": "^3.25.76"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cors": "^2.8.19",
         "@types/express": "^4.17.17",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.3.0",
-        "eslint": "^8.56.0",
+        "@types/jsonwebtoken": "^9.0.10",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
         "prettier": "^3.2.4",
-        "eslint-config-prettier": "^9.1.0"
+        "prisma": "^5.6.0",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.3.0"
     }
 }
