--- a/backend/env.example
+++ b/backend/env.example
@@ -1,19 +1,88 @@
+# ThaiTable Backend Environment Configuration
+# Copy this file to .env and fill in your values
+
+# Application
+NODE_ENV=development
+PORT=3000
+API_VERSION=v1
+
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/thaitable"
+DATABASE_URL="file:./dev.db"
 
 # JWT Authentication
-JWT_SECRET="your-super-secret-jwt-key-here"
-JWT_EXPIRES_IN="1h"
+JWT_SECRET="your-super-secret-jwt-key-at-least-32-characters-long"
+JWT_REFRESH_SECRET="your-super-secret-refresh-key-at-least-32-characters-long"
+JWT_EXPIRES_IN=24h
+JWT_REFRESH_EXPIRES_IN=7d
 
-# Server
-PORT=3000
-NODE_ENV=development
+# CORS Configuration
+CORS_ORIGIN="http://localhost:3000,http://localhost:5173"
 
-# AWS S3 (for image uploads)
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX=100
+
+# File Upload
+UPLOAD_MAX_SIZE=10485760
+
+# Logging
+LOG_LEVEL=info
+
+# AWS S3 (for image uploads - optional)
 AWS_ACCESS_KEY_ID="your-aws-access-key"
 AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
 AWS_REGION="ap-southeast-1"
 AWS_S3_BUCKET="thaitable-images"
 
-# Railway (production)
-# These will be set automatically by Railway
+# Email Service (SendGrid)
+SENDGRID_API_KEY="your-sendgrid-api-key"
+SENDGRID_FROM_EMAIL="noreply@thaitable.com"
+
+# SMS Service (Thai SMS Gateway)
+THAI_SMS_API_KEY="your-thai-sms-api-key"
+THAI_SMS_SENDER="ThaiTable"
+
+# LINE Notify
+LINE_NOTIFY_TOKEN="your-line-notify-token"
+
+# Food Delivery Platforms
+GRABFOOD_API_KEY="your-grabfood-api-key"
+GRABFOOD_MERCHANT_ID="your-grabfood-merchant-id"
+FOODPANDA_API_KEY="your-foodpanda-api-key"
+FOODPANDA_STORE_ID="your-foodpanda-store-id"
+LINEMAN_API_KEY="your-lineman-api-key"
+LINEMAN_CHANNEL_ID="your-lineman-channel-id"
+
+# Analytics & Monitoring
+GOOGLE_ANALYTICS_ID="G-XXXXXXXXXX"
+SENTRY_DSN="https://your-sentry-dsn"
+LOGROCKET_APP_ID="your-logrocket-app-id"
+
+# Maps & Location
+GOOGLE_MAPS_API_KEY="your-google-maps-api-key"
+LINE_MAPS_API_KEY="your-line-maps-api-key"
+
+# Thai Government APIs
+THAI_TAX_API_KEY="your-thai-tax-api-key"
+THAI_BUSINESS_API_KEY="your-thai-business-api-key"
+
+# QR Code Generation
+QR_CODE_API_KEY="your-qr-code-api-key"
+
+# Redis (Caching)
+REDIS_URL="redis://localhost:6379"
+
+# Production Settings (uncomment for production)
+# NODE_ENV=production
+# CORS_ORIGIN="https://yourdomain.com,https://app.yourdomain.com"
+# LOG_LEVEL=warn
+
+# Helicone API Monitoring
+HELICONE_API_KEY="sk-helicone-o3tsf3y-lgheysa-qhumoeq-5tefc3q"
+HELICONE_BASE_URL="https://api.helicone.ai"
+HELICONE_CACHE_ENABLED=true
+HELICONE_RETRY_ENABLED=true
+
+# V0 AI Service
+V0_API_KEY="v1:NGiP5IgS8GyGKnIrQkarzLWq:gY4Ibcs05h3pylEjpBUsM6Ng"
+V0_BASE_URL="https://api.v0.dev"
