--- a/backend/package.json
+++ b/backend/package.json
@@ -1,42 +1,56 @@
 {
-    "name": "thaitable-backend",
-    "version": "0.1.0",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-        "build": "tsc -p tsconfig.json",
-        "prisma": "prisma",
-        "migrate": "prisma migrate dev",
-        "generate": "prisma generate",
-        "start": "node dist/index.js",
-        "lint": "eslint \"src/**/*.{ts,tsx}\"",
-        "format": "prettier --write ."
-    },
-    "dependencies": {
-        "@prisma/client": "^5.6.0",
-        "bcrypt": "^5.1.1",
-        "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
-        "express-rate-limit": "^7.5.1",
-        "helmet": "^7.2.0",
-        "jsonwebtoken": "^9.0.0",
-        "winston": "^3.17.0",
-        "zod": "^3.25.76"
-    },
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.2",
-        "@types/cors": "^2.8.19",
-        "@types/express": "^4.17.17",
-        "@types/jsonwebtoken": "^9.0.10",
-        "@typescript-eslint/eslint-plugin": "^6.14.0",
-        "@typescript-eslint/parser": "^6.14.0",
-        "eslint": "^8.56.0",
-        "eslint-config-prettier": "^9.1.0",
-        "prettier": "^3.2.4",
-        "prisma": "^5.6.0",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.3.0"
-    }
+  "name": "thaitable-backend",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "prisma": "prisma",
+    "migrate": "prisma migrate dev",
+    "generate": "prisma generate",
+    "seed": "npx tsx prisma/seed.ts",
+    "start": "node dist/index.js",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@prisma/client": "^5.6.0",
+    "@sendgrid/mail": "^8.1.5",
+    "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^7.0.1",
+    "@types/qrcode": "^1.5.5",
+    "aws-sdk": "^2.1692.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
+    "helicone": "^1.0.7",
+    "helmet": "^7.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
+    "nodemailer": "^7.0.5",
+    "qrcode": "^1.5.4",
+    "redis": "^5.8.2",
+    "v0": "^2.2.5",
+    "winston": "^3.17.0",
+    "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.2.4",
+    "prisma": "^5.6.0",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
+  }
 }
