--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,37 +10,38 @@
         "lint:fix": "eslint src --ext ts,tsx --fix"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
+        "@hookform/resolvers": "^3.3.2",
+        "axios": "^1.6.2",
+        "date-fns": "^2.30.0",
+        "i18next": "^23.7.6",
+        "i18next-browser-languagedetector": "^7.2.0",
+        "lucide-react": "^0.294.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.20.1",
-        "axios": "^1.6.2",
-        "zustand": "^4.4.7",
         "react-hook-form": "^7.48.2",
-        "zod": "^3.22.4",
-        "@hookform/resolvers": "^3.3.2",
-        "date-fns": "^2.30.0",
-        "lucide-react": "^0.294.0",
         "react-i18next": "^13.5.0",
-        "i18next": "^23.7.6",
-        "i18next-browser-languagedetector": "^7.2.0"
+        "react-router-dom": "^6.20.1",
+        "zod": "^3.22.4",
+        "zustand": "^4.5.7"
     },
     "devDependencies": {
+        "@types/node": "^20.10.4",
         "@types/react": "^18.2.42",
         "@types/react-dom": "^18.2.17",
-        "@types/node": "^20.10.4",
-        "typescript": "^5.3.0",
-        "vite": "^4.5.0",
-        "@vitejs/plugin-react": "^4.2.0",
-        "tailwindcss": "^3.4.1",
-        "postcss": "^8.4.33",
-        "autoprefixer": "^10.4.16",
-        "eslint": "^8.55.0",
         "@typescript-eslint/eslint-plugin": "^6.13.0",
         "@typescript-eslint/parser": "^6.13.0",
+        "@vitejs/plugin-react": "^4.2.0",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.55.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
-        "eslint-config-prettier": "^9.1.0",
-        "prettier": "^3.1.0"
+        "postcss": "^8.4.33",
+        "prettier": "^3.1.0",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.3.0",
+        "vite": "^4.5.0"
     }
 }
